# vscode_cmake_template

./: CMakeLists.txt  README.md  conanfile.txt  configure.js  main.cpp
config/: settings.json.in
config/android/: android_build.cmake  android_config.cmake
config/android/mips64/: build.cmake
config/android/x86/: config.cmake
config/arm-linux/: config.cmake
config/default/: config.cmake
config/emsdk/: build.cmake  config.cmake
config/stm32/: stm32_build.cmake  stm32_config.cmake
config/stm32/f103c8t6/: STM32F103XB_FLASH.ld  build.cmake  config.cmake
config/stm32/f407zgt6/: STM32F407ZG_FLASH.ld  config.cmake
config/win32/mingw32/: config.cmake
config/win32/mingw64/: config.cmake
gtest/: gtest-all.cc  gtest.h
lib/: bitset.c  bitset.h  bitset_test.cpp  crc16.c  crc16.h  crc16_test.cpp
